--- a/SpiteAndMalice HTML/css/Design.css
+++ b/SpiteAndMalice HTML/css/Design.css
@@ -19,6 +19,7 @@ body {
   background-color: #ee9a69;
   height: 100vh;
   overflow: hidden;
+  /* background-image: url('../Photos/The table.jpg'); */
 }
 
 .table {
@@ -61,16 +62,31 @@ body {
   justify-content: center;
 }
 
-.six {
-  background-color: aliceblue;
-}
-
 .eight {
   background-color: aliceblue;
   display: flex;
   align-items: center;
   justify-content: center;
   font-weight: bold;
+  /* position: relative; */
+  /* flex-wrap: wrap; */
+}
+
+.the-deck {
+  background-color: aquamarine;
+  aspect-ratio: 1/1.4;
+  max-height: 100%;
+  /* position: absolute; */
+  top: 0;
+  /* left: 0.5rem; */
+  /* right: 0; */
+  bottom: 0;
+  background-image: url('../Photos/The\ card.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 16.08rem;
+  width: 11.485rem;
 }
 
 .nine {
@@ -81,8 +97,18 @@ body {
   font-size: 15rem;
 }
 
-.ten {
+.center-stacks {
   background-color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.proba {
+  background-color: red;
+  max-height: 100%;
+  height: 16.08rem;
+  width: 11.485rem;
 }
 
 .c11 {
@@ -154,14 +180,6 @@ body {
 .full-card {
   flex: 2;
   background-color: violet;
-}
-
-.c16 {
-  background-color: aliceblue;
-}
-
-.c17 {
-  background-color: aliceblue;
 }
 
 .side-stack-label-number-opponent {
