--- a/SpiteAndMalice HTML/flexDesign.css
+++ b/SpiteAndMalice HTML/flexDesign.css
@@ -48,11 +48,13 @@ body {
   left: 6rem;
   top: -22px;
   right: 0;
+  cursor: pointer;
 }
 
 .card-to-go-opponent {
   position: absolute;
   bottom: -22px;
+  cursor: pointer;
 }
 
 .opponent-cards-left-position {
@@ -120,7 +122,7 @@ body {
   left: 12rem;
 }
 
-.fiftth-card {
+.fifth-card {
   position: absolute;
   left: 16rem;
 }
@@ -269,12 +271,14 @@ body {
   left: 6rem;
   bottom: -22px;
   right: 0;
+  cursor: pointer;
 }
 
 .card-to-go-player {
   position: absolute;
   /* bottom: -22px; */
   top: 0;
+  cursor: pointer;
 }
 
 .player-cards-left-position {
@@ -296,4 +300,14 @@ body {
 
 .center-stack {
   background-color: green;
+} */
+/* .glowing-border {
+  border: 2px solid #dadada;
+  border-radius: 7px;
+}
+
+.glowing-border:focus {
+  outline: none;
+  border-color: #9ecaed;
+  box-shadow: 0 0 10px #9ecaed;
 } */
