--- a/SpiteAndMalice HTML/flexDesign.css
+++ b/SpiteAndMalice HTML/flexDesign.css
@@ -289,6 +289,12 @@ body {
 .player-eticheta-nume-position {
   bottom: -15px;
 }
+
+.display-card-test {
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 /* .central-line {
   background-color: red;
   display: flex;
